<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>org.zzzyxwvut</groupId>
    <artifactId>numerics</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <description>A numeric converter.</description>

    <properties>
	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

	<maven-dependency-plugin.version>3.1.2</maven-dependency-plugin.version>
	<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
	<maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
	<maven-antrun-plugin.version>3.0.0</maven-antrun-plugin.version>
	<exec-maven-plugin.version>3.0.0</exec-maven-plugin.version>

	<ant.version>1.10.9</ant.version>
	<ate.version>0.0.0</ate.version>

	<!-- An empty value implies testing of all classes. -->
	<ate.some></ate.some>
    </properties>

    <dependencies>
	<!--
	    ate should be cloned and locally installed from:
	    https://bitbucket.org/zzzyxwvut/ate.git
	-->
	<dependency>
	    <groupId>org.zzzyxwvut</groupId>
	    <artifactId>ate</artifactId>
	    <version>${ate.version}</version>
	    <optional>true</optional>
	</dependency>
    </dependencies>

    <build>
	<plugins>
	    <plugin>
		<groupId>org.apache.maven.plugins</groupId>
		<artifactId>maven-dependency-plugin</artifactId>
		<version>${maven-dependency-plugin.version}</version>
		<executions>
		    <execution>
			<goals>
			    <goal>properties</goal>
			</goals>
		    </execution>
		</executions>
	    </plugin>

	    <plugin>
		<groupId>org.apache.maven.plugins</groupId>
		<artifactId>maven-compiler-plugin</artifactId>
		<version>${maven-compiler-plugin.version}</version>
		<configuration>
		    <encoding>UTF-8</encoding>
		    <release>11</release>
		    <showDeprecation>true</showDeprecation>
		    <showWarnings>true</showWarnings>
		    <verbose>false</verbose>
		    <compilerArgs>
			<arg>-g</arg>
			<!-- JLS-11, $5.1.1. -->
			<arg>-Xlint:all,-cast</arg>
			<arg>-Xdiags:verbose</arg>
		    </compilerArgs>
		</configuration>
	    </plugin>

	    <plugin>
		<groupId>org.apache.maven.plugins</groupId>
		<artifactId>maven-surefire-plugin</artifactId>
		<version>${maven-surefire-plugin.version}</version>
		<configuration>
		    <skip>true</skip>
		</configuration>
	    </plugin>

	    <plugin>
		<groupId>org.apache.maven.plugins</groupId>
		<artifactId>maven-antrun-plugin</artifactId>
		<version>${maven-antrun-plugin.version}</version>
		<configuration>
		    <exportAntProperties>false</exportAntProperties>
		    <failOnError>true</failOnError>
		</configuration>
		<executions>
		    <!-- Wrap these executions around compiler:testCompile. -->
		    <execution>
			<id>begin-test-module-info-manoeuvre</id>
			<phase>process-test-sources</phase>
			<goals>
			    <goal>run</goal>
			</goals>
			<configuration>
			    <target>
				<!-- Failed compilations keep the extension. -->
				<move file="${project.build.testSourceDirectory}/module-info.peekaboo"
				    tofile="${project.build.testSourceDirectory}/module-info.java"
				    failonerror="false" quiet="true" />
			    </target>
			</configuration>
		    </execution>
		    <execution>
			<id>end-test-module-info-manoeuvre</id>
			<phase>test-compile</phase>
			<goals>
			    <goal>run</goal>
			</goals>
			<configuration>
			    <target>
				<move file="${project.build.testSourceDirectory}/module-info.java"
				    tofile="${project.build.testSourceDirectory}/module-info.peekaboo" />
			    </target>
			</configuration>
		    </execution>
		</executions>
		<dependencies>
		    <dependency>
			<groupId>org.apache.ant</groupId>
			<artifactId>ant</artifactId>
			<version>${ant.version}</version>
		    </dependency>
		</dependencies>
	    </plugin>

	    <!--
		Only execute prefix-matching test methods of a class:
		mvn -e dependency:properties exec:exec -Date.some=.\*ArabicRomanConverterTests@testToRoman

		Skip testing:
		mvn -e clean package -Dexec.skip=true
	    -->
	    <plugin>
		<groupId>org.codehaus.mojo</groupId>
		<artifactId>exec-maven-plugin</artifactId>
		<version>${exec-maven-plugin.version}</version>
		<executions>
		    <execution>
			<id>default-test</id>
			<phase>test</phase>
			<goals>
			    <goal>exec</goal>
			</goals>
		    </execution>
		</executions>
		<configuration>
		    <classpathScope>test</classpathScope>
		    <executable>/usr/bin/java</executable>
		    <fork>true</fork>
		    <!--
			With a single src/main/java/module-info.java, use:

			++module-path target/classes:/path/to/ate.jar
			++patch-module org.zzzyxwvut.numerics.converter=target/test-classes

			With two src/{main,test}/java/module-info.java, use:

			++module-path target/test-classes:/path/to/ate.jar
		    -->
		    <!--
			See java.lang.invoke.MethodHandles#privateLookupIn(Class, MethodHandles.Lookup)
		    -->
		    <commandlineArgs>
			-XX:+UnlockExperimentalVMOptions -XX:+UseEpsilonGC -XX:+AlwaysPreTouch -Xms40m -Xmx40m -Xlog:heap*=info,gc=info -Date.some=${ate.some} --add-reads org.zzzyxwvut.ate=org.zzzyxwvut.numerics.converter --add-modules org.zzzyxwvut.ate --module-path target${file.separator}test-classes${path.separator}${org.zzzyxwvut:ate:jar} --module org.zzzyxwvut.numerics.converter/org.zzzyxwvut.numerics.converter.internal.NumericConverterTester
		    </commandlineArgs>
		    <timeout>16000</timeout>
		    <workingDirectory>${basedir}</workingDirectory>
		</configuration>
	    </plugin>
	</plugins>
    </build>
</project>
